<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:background="@color/sliderBack"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:text="@string/motor_info"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- ....... Base ........ -->

    <ImageButton
        android:id="@+id/motor1_left"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/motor_a"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/seekBar1"
        app:layout_constraintStart_toStartOf="@+id/seekBar1"
        app:layout_constraintTop_toBottomOf="@+id/seekBar1" />

    <ImageButton
        android:id="@+id/motor1_right"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />


    <com.marcinmoskala.arcseekbar.ArcSeekBar
        android:id="@+id/seekBar1"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:progressBackgroundColor="@color/sliderBack"
        app:progressBackgroundWidth="5dp"
        app:progressColor="@color/sliderBack"
        app:progressWidth="5dp" />

    <!-- ....... Braccio ........ -->

    <ImageButton
        android:id="@+id/motor2_left"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:src="@drawable/arrow_left"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/motor_c"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/seekBar2"
        app:layout_constraintStart_toStartOf="@+id/seekBar2"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <ImageButton
        android:id="@+id/motor2_right"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:src="@drawable/arrow_right"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />


    <com.marcinmoskala.arcseekbar.ArcSeekBar
        android:id="@+id/seekBar2"
        android:layout_width="150dp"
        android:layout_height="75dp"
        app:progressBackgroundColor="@color/sliderBack"
        app:progressBackgroundWidth="5dp"
        app:progressWidth="5dp"
        app:progressColor="@color/sliderBack"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- ....... Mano ........ -->

    <ImageButton
        android:id="@+id/motor3_left"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:src="@drawable/arrow_left"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/motor_d"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/seekBar3"
        app:layout_constraintStart_toStartOf="@+id/seekBar3"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

    <ImageButton
        android:id="@+id/motor3_right"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:src="@drawable/arrow_right"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />


    <com.marcinmoskala.arcseekbar.ArcSeekBar
        android:id="@+id/seekBar3"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:progressBackgroundColor="@color/sliderBack"
        app:progressBackgroundWidth="5dp"
        app:progressColor="@color/sliderBack"
        app:progressWidth="5dp" />


    <!-- ....... Velocità ........ -->

    <Switch
        android:id="@+id/speed_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:checked="false" />

    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>