<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.WelcomeActivity"
    android:background="@color/sliderBack">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/mGreen"
                android:fontFamily="@font/fjalla_one"
                android:gravity="center_vertical"
                android:text="Welcome"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/play_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:background="@drawable/round_cornered_button"
                android:fontFamily="@font/fjalla_one"
                android:text="PLAY"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_background_white"
                android:fontFamily="@font/fjalla_one"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp"
                android:text="@string/welcome_play"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mount_instructions"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/round_cornered_button"
                android:fontFamily="@font/fjalla_one"
                android:text="Istruzioni"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_background_white"
                android:fontFamily="@font/fjalla_one"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp"
                android:text="@string/welcome_instructions"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/segnalazioni"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/round_cornered_button"
                android:fontFamily="@font/fjalla_one"
                android:text="Segnalazioni"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_background_white"
                android:fontFamily="@font/fjalla_one"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp"
                android:text="@string/welcome_segnalazioni"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/connection"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/round_cornered_button"
                android:fontFamily="@font/fjalla_one"
                android:text="CONNECT"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_background_white"
                android:fontFamily="@font/fjalla_one"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp"
                android:text="@string/welcome_connection"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/closeButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/round_cornered_button_red"
                android:fontFamily="@font/fjalla_one"
                android:text="Close"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>
</android.support.constraint.ConstraintLayout>